Update to 1.21, migrate to NeoForge